--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,19 +4,28 @@
   font-family: "Rubik", Verdana, Geneva, Tahoma, sans-serif;
 }
 .box_styling {
-  box-shadow: 5px 10px 8px #888888;
-  background-color: white;
-  border: 1px solid black;
-  border-radius: 10px;
   padding: 10px;
+  margin: 10px;
+  /* border: 1px solid black; */
+  border-radius: 10px;
+  background-color: white;
+  box-shadow: 5px 10px 8px #888888;
+}
+.shadow_effect {
+    box-shadow: 0px 8px 6px 0px rgba(0, 0, 0, 0.24);
+}
+.cols{
+    flex-wrap: wrap;
 }
 
 /* Header */
 
 header {
+    padding: 10px;
   color: rgb(39, 35, 35);
   height: 60px;
   display: flex;
+  flex: space-between;
   align-items: center; /*vertical alignment  */
   background-color: #ffffff;
   position: sticky;
@@ -25,32 +34,41 @@ header {
 }
 /* Navigation */
 
-nav ul {
-  display: flex;
-  justify-content: right;
+header nav {
+  /* flex-direction: row; */
+  justify-content: flex-end;
 }
 
 /* Main */
 
 main {
-    padding: 30px;
+  padding: 30px;
   background-image: linear-gradient(rgb(169, 169, 169), rgb(255, 255, 255));
 }
 
 /* Professional Details */
 .professional_details__box {
-    flex: 1;
-    margin: 30px;
-    width: 25%;
+  flex: 1;
+  margin: 30px;
+  width: 25%;
 }
 .professional_details__box h2 {
-   text-align: center;
+    padding: 10px;
+  text-align: center;
 }
 .professional_details__box img {
+    width: 100%;
+    border-radius: 5px;
 }
- .professional_details__box ul {  /*use selector class to bold every ODD */
-    text-align: left;
-    list-style: none;
+.professional_details__box ul {
+  /*use selector class to bold every ODD */
+  
+  text-align: left;
+  list-style: none;
+}
+.professional_details__box li:nth-child(odd) {
+    padding-top: 10px;
+    font-weight: bold
 }
 
 /* About Me */
@@ -60,7 +78,7 @@ main {
 /* Contact */
 
 /* Footer */
-footer{
-    text-align: center;
+footer {
+  text-align: center;
 }
 /* Responsive */
