--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,7 @@
 * {
   padding: 0;
   margin: 0;
+  color: #36454F;
   font-family: "Rubik", Verdana, Geneva, Tahoma, sans-serif;
 }
 .box_styling {
@@ -52,29 +53,42 @@ nav{
 nav div{
   margin: 10px;
 }
+nav a{
+  font-size: 20px;
+  font-weight: bold;
+  color: #36454F ;
+  text-decoration: none;
+
+  
+
+}
 
 
 /* Main */
 
 main {
   display: flex;
-
-  padding: 30px;
+align-items: top;
+  /* padding: 30px; */
   background-image: linear-gradient(rgb(169, 169, 169), rgb(255, 255, 255));
 
 }
 .flex-container-1{
-flex: 10;
+  margin: 30px 0 0 15px;
+  /* width: 40%; */
+/* flex-basis: 25%; */
 }
 .flex-container-2{
-  flex:20;
+  margin: 30px 15px 0 0;
+  /* flex-basis: auto;
+  align-items: left; */
 }
 
 /* Professional Details */
 .professional_details__box {
   flex: 1;
-  margin: 30px;
-  width: 25%;
+  width: 90%;
+
 }
 .professional_details__box h2 {
     padding: 10px;
@@ -98,7 +112,10 @@ flex: 10;
 /* About Me */
 
 /* My Work */
-
+.secondary-items{
+  display: flex;
+  flex-wrap: wrap;
+}
 /* Contact */
 
 /* Footer */
