--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,10 @@
 }
 h1, h2, h3, h4, h5, h6{
   font-family: "Rubik", Verdana;
+  
+}
+h2{
+padding-bottom: 1em;
 }
 
 .box_styling {
@@ -13,17 +17,17 @@ h1, h2, h3, h4, h5, h6{
   margin: 10px;
   /* border: 1px solid black; */
   border-radius: 10px;
-  background-color: white;
-  /* box-shadow: 5px 10px 8px #888888; */
+  background-color: rgb(255, 255, 255);
+  box-shadow: 5px 10px 8px #888888;
 }
-.header-shadow_effect {
-    box-shadow: 0px 8px 6px 0px rgba(0, 0, 0, 0.24);
-}
+
 
 
 
 /* Header */
-
+.header-shadow_effect {
+    box-shadow: 0px 8px 6px 0px rgba(0, 0, 0, 0.24);
+}
 header {
   padding: 10px;
   color: rgb(39, 35, 35);
@@ -74,7 +78,7 @@ main {
   display: flex;
 align-items: top;
   /* padding: 30px; */
-  background-image: linear-gradient(rgb(169, 169, 169), rgb(255, 255, 255));
+  background-image: linear-gradient(rgb(219, 230, 252), rgb(255, 255, 255));
 
 }
 .flex-container-1{
@@ -101,12 +105,13 @@ flex-grow: 2;
     border-radius: 5px;
 }
 .professional_details__box ul {
-  /*use selector class to bold every ODD */
+ 
   
   text-align: left;
   list-style: none;
 }
 .professional_details__box li:nth-child(odd) {
+     /*use selector class to bold every ODD */
     padding-top: 10px;
     font-weight: bold
 }
@@ -114,13 +119,17 @@ flex-grow: 2;
 /* About Me */
 
 /* My Work */
-.my-work__first{
-border: 1px solid black;
+.my-work__first_card figure{
+display: flex;
+flex-direction: row;
 }
 .my-work__first_card img{
   width: 50%;
   border-radius: 10px;
 }
+.my-work__first_card a{
+  text-decoration: none;
+  }
 .my-work__second{
   display: flex;
   padding: 25px;
@@ -148,7 +157,61 @@ text-decoration: none;
   
 }
 /* Contact */
+form {
+  max-width: 600px;
+  text-align: center;
+  margin: 0 auto;
+  padding: 0 0 75px 0;
 
+}
+
+fieldset {
+  border: 0;
+  margin: 0;
+  padding: 0;
+}
+
+.contact-form input,
+.contact-form textarea {
+  background-color: rgb(219, 230, 252);
+  border: 0;
+  outline: 0;
+  display: block;
+  width: 100%;
+  margin-top: 1em;
+  padding: .8em;
+  font-family: 'Lato', 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-weight: 300;
+  font-size: 14px;
+  border-radius: 6px;
+  box-shadow: 0 1px 1px rgba(34,34,34,0.1);
+  resize: none;
+}
+
+.contact-form textarea {
+  margin-bottom: 1em;
+  height: 125px;
+}
+
+.contact-form input:focus {
+  box-shadow: 0 0px 2px rgba(3,201,169,1)!important;
+}
+
+.contact-form textarea:focus {
+  
+  box-shadow: 0 0px 2px rgba(3,201,169,1)!important;
+} 
+
+#submit {
+  color: #36454F; 
+  background-color: #bfbfbf;
+  cursor: pointer;
+  font-weight: 400;
+}
+    
+#submit:hover {
+  background-color: rgba(3,201,169,.6);
+}
 /* Footer */
 footer {
   text-align: center;
